--- a/gallery.html
+++ b/gallery.html
@@ -3,20 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Artist Gallery</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>🎤 My Favorite Artists</h1>
-  <ul id="artist-list"></ul>
+
+  <div class="gallery-container">
+    <div id="hover-card" class="hidden">
+      <img id="card-image" src="" alt="Artist" />
+      <p id="card-caption"></p>
+    </div>
+
+    <ul id="artist-list"></ul>
+  </div>
 
   <nav>
     <a href="index.html">Home</a> |
-    <a href="interactive.html">Interactive Page</a>
+    <a href="fun.html">Interactive Page</a>
   </nav>
 
   <script src="script.js"></script>
   <script>
-    listArtists();
+    listArtists(); // Call the function to create artist list
   </script>
 </body>
 </html>
