got to add pictures but hover and artists effect coming in nice

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Artist Gallery</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>🎤 My Favorite Artists</h1>
@@ -19,7 +19,7 @@
 
   <nav>
     <a href="index.html">Home</a> |
-    <a href="fun.html">Interactive Page</a>
+    <a href="interactive.html">Interactive Page</a>
   </nav>
 
   <script src="script.js"></script>
