imsges and oither stuff

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎤 My Favorite Artists</h1>
+  <h1>My Favorite Artists</h1>
 
   <div class="gallery-container">
     <div id="hover-card" class="hidden">
@@ -24,7 +24,7 @@
 
   <script src="script.js"></script>
   <script>
-    listArtists(); // Call the function to create artist list
+    listArtists(); 
   </script>
 </body>
 </html>
