finishing up rows and columns

--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Artist Gallery</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>My Favorite Artists</h1>
+  <h1 class="text-center mb-4">My Favorite Artists</h1>
 
   <div class="gallery-container">
     <div id="hover-card" class="hidden">
