new button woth suggest artist kinda coo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <h1>🎵 My Soundtrack</h1>
   <p>Welcome to my top 10 favorite music artists. Click below to explore more!</p>
   
-  <button onclick="showArtist()">Random Artist Suggestion</button>
+  <button onclick="showArtist()" class="btn btn-success mt-3">Suggest an Artist</button>
   <p id="artist-output"></p>
-
   <nav>
     <a href="gallery.html">Artist Gallery</a> |
     <a href="interactive.html">Interactive Page</a>
