split and added more divs to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,18 @@
       <p id="card-caption"></p>
     </div>
 
-    <ul id="artist-list"></ul>
+    <div class="row">
+      <!-- Left 5 artists -->
+      <div class="col-md-6">
+        <ul id="artist-list-left" class="list-group"></ul>
+      </div>
+    
+      <!-- Right 5 artists -->
+      <div class="col-md-6">
+        <ul id="artist-list-right" class="list-group"></ul>
+      </div>
+    </div>
+    
   </div>
 
   <nav>
