--- a/gallery.html
+++ b/gallery.html
@@ -9,34 +9,38 @@
 <body>
   <h1 class="text-center mb-4">My Favorite Artists</h1>
 
-  <div class="gallery-container">
-    <div id="hover-card" class="hidden">
+  <div class="gallery-container position-relative">
+    <!-- Hover Card -->
+    <div id="hover-card" class="hidden position-absolute">
       <img id="card-image" src="" alt="Artist" />
       <p id="card-caption"></p>
     </div>
 
-    <div class="row">
-      <!-- Left 5 artists -->
-      <div class="col-md-6">
-        <ul id="artist-list-left" class="list-group"></ul>
-      </div>
-    
-      <!-- Right 5 artists -->
-      <div class="col-md-6">
-        <ul id="artist-list-right" class="list-group"></ul>
+    <!-- Artist Columns -->
+    <div class="container-fluid">
+      <div class="row justify-content-between">
+        <!-- Left 5 Artists -->
+        <div class="col-4 d-flex justify-content-center" id="left-column">
+          <ul id="artist-list-left"></ul>
+        </div>
+
+        <!-- Right 5 Artists -->
+        <div class="col-4 d-flex justify-content-center" id="right-column">
+          <ul id="artist-list-right"></ul>
+        </div>
       </div>
     </div>
-    
   </div>
 
-  <nav>
+  <!-- Navigation -->
+  <nav class="text-center mt-4">
     <a href="index.html">Home</a> |
     <a href="interactive.html">Interactive Page</a>
   </nav>
 
   <script src="script.js"></script>
   <script>
-    listArtists(); 
+    listArtists();
   </script>
 </body>
 </html>
