--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Artist Gallery</title>
+  <link rel="stylesheet" href="https://use.typekit.net/bjv0nvx.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
