--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>My Top Artists - Home</title>
+  <link rel="stylesheet" href="https://use.typekit.net/bjv0nvx.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +12,10 @@
   
   <button onclick="showArtist()" class="btn btn-success mt-3">Suggest an Artist</button>
   <p id="artist-output"></p>
+  <div class="mt-4 text-center">
+    <button onclick="showLyric()" class="btn btn-dark">Show Random Lyric</button>
+    <p id="lyric-output" class="mt-3 fst-italic"></p>
+  </div>
   <nav>
     <a href="gallery.html">Artist Gallery</a> |
     <a href="interactive.html">Interactive Page</a>
