--- a/interactive.html
+++ b/interactive.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Interactive Page</title>
+  <link rel="stylesheet" href="https://use.typekit.net/bjv0nvx.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
