--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <p id="generated-lyric"></p>
   <meta charset="UTF-8">
   <title>My Top Artists - Home</title>
   <link rel="stylesheet" href="https://use.typekit.net/bjv0nvx.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎵 My Soundtrack</h1>
+  <h1>My Favorite Artists Site</h1>
   <p>Welcome to my top 10 favorite music artists. Click below to explore more!</p>
   
   <button onclick="showArtist()" class="btn btn-success mt-3">Suggest an Artist</button>
