--- a/interactive.html
+++ b/interactive.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎮 Rank My Artists!</h1>
-  <p>Drag to re-order your favorites:</p>
+  <h1>Rank My Artists!</h1>
+  <p>Drag to re-order these favorites:</p>
 
   <ul id="rank-list" ondrop="drop(event)" ondragover="allowDrop(event)">
-    <li draggable="true" ondragstart="drag(event)">Artist 1</li>
-    <li draggable="true" ondragstart="drag(event)">Artist 2</li>
-    <li draggable="true" ondragstart="drag(event)">Artist 3</li>
-    <li draggable="true" ondragstart="drag(event)">Artist 4</li>
+    <li draggable="true" ondragstart="drag(event)">Jpegmafia</li>
+    <li draggable="true" ondragstart="drag(event)">Travis Scott</li>
+    <li draggable="true" ondragstart="drag(event)">Brockhampton</li>
+    <li draggable="true" ondragstart="drag(event)">Radiohead</li>
   </ul>
 
   <nav>
